--- a/res/layout-sw480dp/activity_main.xml
+++ b/res/layout-sw480dp/activity_main.xml
@@ -9,29 +9,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="481dp"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:gravity="center"
+        android:background="#757575"
         android:orientation="horizontal">
+
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-
+            android:layout_weight="2"
             android:fontFamily="sans-serif-smallcaps"
-
+            android:gravity="center"
             android:text="Almacen CortinApp"
-            android:textColor="@color/brown_400"
-            android:textSize="55sp" />
+            android:textColor="@color/black"
+            android:textSize="24sp" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-
+            android:layout_width="300px"
+            android:layout_height="300px"
+            android:layout_weight="1"
             android:outlineAmbientShadowColor="@color/black"
-            app:srcCompat="@drawable/cortinapp3" />
+            app:srcCompat="@drawable/cortinapp" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,10 +48,10 @@
             android:background="#757575"
             android:backgroundTint="#757575"
             android:gravity="center"
+            android:textColor="@color/brown_400"
             android:text="REGISTRO DE ABONOS"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="@color/brown_400"
-            android:textSize="60sp" />
+            android:textSize="25sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,31 +59,33 @@
             android:background="#BCAAA4"
             android:backgroundTint="#BCAAA4"
             android:text="Codigo de Venta"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/black"
-            android:textSize="60sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edtcodarticulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="60sp" />
+            android:background="#bdbdbd"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:background="#BCAAA4"
             android:backgroundTint="#BCAAA4"
+            android:layout_marginTop="25dp"
             android:text="Fecha de venta"
             android:textColor="@color/black"
-            android:textSize="60sp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edtcolor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="60sp" />
+            android:background="#bdbdbd"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -89,32 +93,35 @@
             android:background="#BCAAA4"
             android:backgroundTint="#BCAAA4"
             android:text="Valor abonado"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/black"
-            android:textSize="60sp" />
+            android:layout_marginTop="25dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edtvalormc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="60sp" />
+            android:background="#bdbdbd"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:background="#BCAAA4"
             android:backgroundTint="#BCAAA4"
+            android:layout_marginTop="25dp"
             android:text="Saldo actual"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/black"
-            android:textSize="60sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edtarea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="60sp" />
+            android:background="#bdbdbd"
+            android:textSize="20sp" />
 
     </LinearLayout>
 </LinearLayout>
