--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -22,26 +22,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_margin="16dp"
         android:background="#757575"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:gravity="center">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:fontFamily="sans-serif-smallcaps"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textColor="@color/black"
-            android:textSize="34sp" />
 
         <ImageView
             android:id="@+id/imageViewMisionTic"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="389dp"
+            android:layout_height="300px"
             app:srcCompat="@drawable/cortinapp" />
 
     </LinearLayout>
@@ -57,41 +47,37 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:text="@string/text_username"
-            android:textSize="34sp" />
-
+            android:textSize="25sp" />
         <EditText
             android:id="@+id/edtUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:hint="email@domain.com"
-            android:textSize="34sp" />
+            android:textSize="25sp"
+            android:hint="email@domain.com"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:text="@string/text_password"
-            android:textSize="34sp" />
-
+            android:layout_marginTop="25dp"
+            android:textSize="25sp"/>
         <EditText
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:hint="@string/hint_password"
-            android:textSize="34sp" />
+            android:textSize="25sp"/>
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="25dp"
             android:onClick="onLogin"
-            android:text="@string/botonLogin"
-            android:textSize="34sp" />
+            android:text="LOGIN"
+            android:textColorLink="#5E35B1"
+            android:textSize="24sp" />
 
 
 
